src/styles.css
:root {
   --theme-header: lightgray;
   --theme-sidebar: rgb(235, 235, 235);
   --theme-border: black;
   --theme-text: black;
   --theme-selected-project-text: white;
   --theme-selected-project-background: rgb(50, 50, 200);
   --theme-selected-project-selection-text: black;
   --theme-selected-project-selection-background: yellow;
}

* {
   padding: 0;
   margin: 0;
   color: var(--theme-text);
}

body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-flow: column;
   min-height: 100vh;
}

body > header {
   padding: 24px;
   background: var(--theme-header);
}

body > main {
   display: flex;
   flex: 1;
   border-top: solid var(--theme-border) 1px;
}

body > main > nav {
   display: flex;
   flex-flow: column;
   border-right: solid var(--theme-border) 1px;
   gap: 16px;
   flex-basis: 300px;
   padding: 24px;
   background: var(--theme-sidebar);
}

body > main > nav > ul {
   display: flex;
   flex-flow: column;
   gap: 12px;
}

body > main > nav > ul > form {
   display: flex;
   flex-flow: column;
}

body > main > nav > ul .project {
   text-align: start;
   border: none;
   background: none;
   cursor: pointer;
   color: rgb(120, 120, 120);
   padding: 8px 16px;
   border-radius: 16px;
   font-size: 110%;
   transition: color 150ms, background-color 150ms;
}

body > main > nav > ul > button {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 8px;
}

body > main > nav > ul .project:hover {
   color: var(--theme-text);
}

body > main > nav > ul .project.selected {
   color: var(--theme-selected-project-text);
   background: var(--theme-selected-project-background);
}

body > main > nav > ul input.project.selected {
   cursor: text;
}

body > main > nav > ul button.project.selected::after {
   opacity: 0%;
   content: "Edit title";
   font-size: 60%;
   transition: opacity 150ms;
}

body > main > nav > ul button.project.selected:hover::after {
   opacity: 80%;
}

body > main > nav > ul .project.selected::selection {
   color: var(--theme-selected-project-selection-text);
   background: var(--theme-selected-project-selection-background);
}

body > main > ul.tasks {
   --task-size: 200px;
   --task-layout: repeat(auto-fill, var(--task-size));
   padding: 24px;
   gap: 24px;
   display: grid;
   grid-template: var(--task-layout) / var(--task-layout);
   justify-content: space-evenly;
   flex: 1;
   transition: opacity 200ms;
}

body > main > ul.tasks.hidden {
   transition: opacity 10ms;
   opacity: 0%;
}

body > main > ul.tasks > * {
   --task-padding: 24px;
   --task-border-size: 1px;
   border: solid var(--theme-border) var(--task-border-size);
   height: calc(var(--task-size) - var(--task-padding) * 2 - var(--task-border-size));
   padding: var(--task-padding);
   border-radius: 24px;
   overflow: auto;
}

